added hardhat configs

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
+ALCHEMY_API_KEY=
 INFURA_API_KEY=
 CMC_API_KEY=
 
 ETHERSCAN_API_KEY=
-ARBISCAN_API_KEY=
-OPTIMISMSCAN_API_KEY=
-POLYSCAN_API_KEY=
 
 MNEMONIC=
+
+FORK_BLOCK_NUMBER=16194620
+
+ENABLE_GAS_REPORT=true
