--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
     },
     "devDependencies": {
         "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+        "@uniswap/sdk-core": "^3.2.2",
+        "@uniswap/v2-sdk": "^3.0.1",
+        "@uniswap/v3-sdk": "^3.9.0",
+        "bignumber.js": "^9.1.0",
         "chalk": "^4.1.2",
+        "decimal.js": "^10.4.0",
+        "dotenv": "^16.0.3",
         "hardhat": "^2.13.0",
         "hardhat-contract-sizer": "^2.8.0",
         "hardhat-deploy": "^0.11.23",
-        "hardhat-tracer": "^1.2.1"
+        "hardhat-tracer": "^1.2.1",
+        "jsbi": "^4.3.0",
+        "tiny-invariant": "^1.3.1"
     }
 }
